TODO
* lnkinfo: : should be before \t
* check behavior of liblnk_file_link_refers_to_file() seems to block certain time values from being printed.
* what about trailing data in xp lnk files ?
* what about shell items
* what about ole properties
* pylnk add functions
* add support for 0xa0000009

File format:
* Ignore the location information (ForceNoLinkInfo)
* what is controlled by the has location info?

Checks
* compare environment variables string and unicode string
* compare icon location data string, string and unicode string
  - data string not necessary equal to string in data block, due to expansion of %VAR%

Refactor
* volume information read into separate subfunction
* network share information read into separate subfunction

Debug
* print descriptive name of data_block_signature
* print values of additional extra blocks
  - console properties data block
  - console codepage data block
  - shim layer data block
  - metadata property store data block
  - shell item identifiers list data block
* remaining known folder identifiers in test set

Library
* create API functions to access link information values
* add libfvalue

API
* add functions
  - for icon location block ?
  - for special and/or known folder identifier
* remove liblnk_file_get_link_target_identifier_data

20160126
* worked on tests
* applied updates

20160109
* fixes for rpmbuild

20160107
* worked on Python 3 support
* 2016 update

20151229
* worked on setup.py

20151222
* applied updates

20151205
* worked on Python bindings

20150830
* worked on Python 3 support
  - added support for distributed link tracker functions

20150726
* worked on tests

20150725
* worked on setup.py

20150617
* bug fixes after fuzzing with AFL

20150616
* bug fixes after fuzzing with AFL

20150609
* Bug fix for handling volume label

20150105
* 2015 update

20141222
* worked on Python 3 support

20141220
* worked on Python 3 support
* worked on tests

20141218
* worked on Python 3 support

20141216