@@ -30,7 +30,7 @@ tooling to be able to process this file type.
 [preface]
 == License
 ....
-Copyright (C) 2009-2015, Joachim Metz <joachim.metz@gmail.com>.
+Copyright (C) 2009-2016, Joachim Metz <joachim.metz@gmail.com>.
 Permission is granted to copy, distribute and/or modify this document under the 
 terms of the GNU Free Documentation License, Version 1.3 or any later version 
 published by the Free Software Foundation; with no Invariant Sections, no 
@@ -62,6 +62,7 @@ in the section entitled "GNU Free Documentation License".
 | 0.0.17 | J.B. Metz | October 2014 | Corrected format GUID with thanks to J. Sylve.
 | 0.0.18 | J.B. Metz | October 2014 | Switched to asciidoc format.
 | 0.0.19 | J.B. Metz | June 2015 | Small changes.
+| 0.0.20 | J.B. Metz | February 2016 | Addtional information regarding corruption scenarios with thanks to B. Spasojevic.
 |===
 
 :numbered:
@@ -850,6 +851,14 @@ The Hot Key values consists of 2 bytes each bytes contains part of the correspon
 | | | 
 | 0x04 | HOTKEYF_ALT | The alt key
 |===
+
+== Corruption scenarios
+=== Empty location information
+In this scenario the HasLinkInfo is set but the location information is filled 
+with 0-byte values.
+
+[NOTE]
+Windows Explorer considers this valid LNK data.
 
 :numbered!:
 [appendix]
